@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.26
+    - minify javascripts
     - conway accepts jquery param
 
 0.25
